force-app/main/default/objects/CMCreationEvent__e/CMCreationEvent__e.object-meta.xml
<CustomObject>
    <description>Evento que se crea para indicar que ha creado un nuevo lead en SF y que será necesario crear los respectivos miembros de campaña MKT/CTI o miembros de campaña AG (según corresponda)</description>
    <label>CM Creation Event</label>
    <pluralLabel>CM Creation Events</pluralLabel>
</CustomObject>