force-app/main/default/objects/CMCreationEvent__e/fields/ageRange__c.field-meta.xml
<CustomField>
    <fullName>ageRange__c</fullName>
    <label>Rango de Edad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>