force-app/main/default/objects/CMCreationEvent__e/fields/AmountMerchandise__c.field-meta.xml
<CustomField>
    <fullName>AmountMerchandise__c</fullName>
    <label>Importe Mercancía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>