force-app/main/default/objects/CMCreationEvent__e/fields/birthdate__c.field-meta.xml
<CustomField>
    <fullName>birthdate__c</fullName>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>