force-app/main/default/objects/CMCreationEvent__e/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>