force-app/main/default/objects/CMCreationEvent__e/fields/campaignCESS__c.field-meta.xml
<CustomField>
    <fullName>campaignCESS__c</fullName>
    <label>Campaña - CESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>