force-app/main/default/objects/CMCreationEvent__e/fields/campaignCTI__c.field-meta.xml
<CustomField>
    <fullName>campaignCTI__c</fullName>
    <description>Originalmente machea con Lead.campaign_cti__c y se cambia en el apex CESS_LeadTriggerHelper por el campo Lead.Campaign_CTI_Picklist__c</description>
    <label>Campaña CTI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>