force-app/main/default/objects/CMCreationEvent__e/fields/campaingtypeCess__c.field-meta.xml
<CustomField>
    <fullName>campaingtypeCess__c</fullName>
    <label>Tipo de Campaña - CESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>