force-app/main/default/objects/CMCreationEvent__e/fields/CESSIDDisplayAdvertisments__c.field-meta.xml
<CustomField>
    <fullName>CESSIDDisplayAdvertisments__c</fullName>
    <label>ID del display de anuncios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>