force-app/main/default/objects/CMCreationEvent__e/fields/CESSIDGoogleAnalytics__c.field-meta.xml
<CustomField>
    <fullName>CESSIDGoogleAnalytics__c</fullName>
    <label>ID Google Analytics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>