force-app/main/default/objects/CMCreationEvent__e/fields/CESSIdPricing__c.field-meta.xml
<CustomField>
    <fullName>CESSIdPricing__c</fullName>
    <label>Id Tarificacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>