force-app/main/default/objects/CMCreationEvent__e/fields/CESSScoring__c.field-meta.xml
<CustomField>
    <fullName>CESSScoring__c</fullName>
    <label>Valor Scoring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>