force-app/main/default/objects/CMCreationEvent__e/fields/DescriptionMerchandise__c.field-meta.xml
<CustomField>
    <fullName>DescriptionMerchandise__c</fullName>
    <label>Descripción Mercancía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>