force-app/main/default/objects/CMCreationEvent__e/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Campo GCLID que llevara la información al campo homónimo del CM MKT</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>