force-app/main/default/objects/CMCreationEvent__e/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <label>Id. externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>