force-app/main/default/objects/CMCreationEvent__e/fields/insuranceCompany__c.field-meta.xml
<CustomField>
    <fullName>insuranceCompany__c</fullName>
    <label>Compañía de procedencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>