force-app/main/default/objects/CMCreationEvent__e/fields/InsuredRisk__c.field-meta.xml
<CustomField>
    <fullName>InsuredRisk__c</fullName>
    <label>Riesgo Asegurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>