force-app/main/default/objects/CMCreationEvent__e/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Origen del candidato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>