force-app/main/default/objects/CMCreationEvent__e/fields/lineInsurance__c.field-meta.xml
<CustomField>
    <fullName>lineInsurance__c</fullName>
    <label>Ramo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>