force-app/main/default/objects/CMCreationEvent__e/fields/matchedRecordId__c.field-meta.xml
<CustomField>
    <fullName>matchedRecordId__c</fullName>
    <description>Id de lead o cliente ya existente que coindice con el lead recién creado</description>
    <label>Id de lead o cliente coincidente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>