force-app/main/default/objects/CMCreationEvent__e/fields/MerchandiseType__c.field-meta.xml
<CustomField>
    <fullName>MerchandiseType__c</fullName>
    <label>Tipo de Mercancía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>