force-app/main/default/objects/CMCreationEvent__e/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>CTI Orden</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>