force-app/main/default/objects/CMCreationEvent__e/fields/quoteCode__c.field-meta.xml
<CustomField>
    <fullName>quoteCode__c</fullName>
    <label>Código de Proyecto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>