force-app/main/default/objects/CMCreationEvent__e/fields/referenceCampaign__c.field-meta.xml
<CustomField>
    <fullName>referenceCampaign__c</fullName>
    <label>Campaña Registro Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>