force-app/main/default/objects/CMCreationEvent__e/fields/referencesourceCess__c.field-meta.xml
<CustomField>
    <fullName>referencesourceCess__c</fullName>
    <label>Origen - CESS Registro Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>