force-app/main/default/objects/CMCreationEvent__e/fields/renewalDate__c.field-meta.xml
<CustomField>
    <fullName>renewalDate__c</fullName>
    <label>Fecha de Renovación</label>
    <type>Date</type>
</CustomField>