force-app/main/default/objects/CMCreationEvent__e/fields/riskBrand__c.field-meta.xml
<CustomField>
    <fullName>riskBrand__c</fullName>
    <label>Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>