force-app/main/default/objects/CMCreationEvent__e/fields/riskCategory__c.field-meta.xml
<CustomField>
    <fullName>riskCategory__c</fullName>
    <label>Modalidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>