force-app/main/default/objects/CMCreationEvent__e/fields/riskDescription__c.field-meta.xml
<CustomField>
    <fullName>riskDescription__c</fullName>
    <label>Descripción del Riesgo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>