force-app/main/default/objects/CMCreationEvent__e/fields/riskDriverBirthDate__c.field-meta.xml
<CustomField>
    <fullName>riskDriverBirthDate__c</fullName>
    <label>Fecha Nacimiento de Conductor</label>
    <type>Date</type>
</CustomField>