force-app/main/default/objects/CMCreationEvent__e/fields/riskdriverLicensedate__c.field-meta.xml
<CustomField>
    <fullName>riskdriverLicensedate__c</fullName>
    <label>Fecha Carnet de Conductor</label>
    <type>Date</type>
</CustomField>