force-app/main/default/objects/CMCreationEvent__e/fields/riskEcicard__c.field-meta.xml
<CustomField>
    <fullName>riskEcicard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarjeta ECI (S/N)</label>
    <type>Checkbox</type>
</CustomField>