force-app/main/default/objects/CMCreationEvent__e/fields/riskExpirationdate__c.field-meta.xml
<CustomField>
    <fullName>riskExpirationdate__c</fullName>
    <label>Fecha Vencimiento</label>
    <type>Date</type>
</CustomField>