force-app/main/default/objects/CMCreationEvent__e/fields/riskGender__c.field-meta.xml
<CustomField>
    <fullName>riskGender__c</fullName>
    <label>Sexo del Riesgo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>