force-app/main/default/objects/CMCreationEvent__e/fields/riskInsuredBirthDate__c.field-meta.xml
<CustomField>
    <fullName>riskInsuredBirthDate__c</fullName>
    <label>Fecha Nacimiento Asegurado(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>