force-app/main/default/objects/CMCreationEvent__e/fields/riskinsuredNumber__c.field-meta.xml
<CustomField>
    <fullName>riskinsuredNumber__c</fullName>
    <label>Número de asegurados</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>