force-app/main/default/objects/CMCreationEvent__e/fields/RiskLocation__c.field-meta.xml
<CustomField>
    <fullName>RiskLocation__c</fullName>
    <label>Localidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>