force-app/main/default/objects/CMCreationEvent__e/fields/riskModel__c.field-meta.xml
<CustomField>
    <fullName>riskModel__c</fullName>
    <label>Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>