force-app/main/default/objects/CMCreationEvent__e/fields/RiskOptionCapitalInsured__c.field-meta.xml
<CustomField>
    <fullName>RiskOptionCapitalInsured__c</fullName>
    <label>Opción/Capital Asegurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>