force-app/main/default/objects/CMCreationEvent__e/fields/riskOwnerBirthDate__c.field-meta.xml
<CustomField>
    <fullName>riskOwnerBirthDate__c</fullName>
    <label>Fecha Nacimiento de Propietario</label>
    <type>Date</type>
</CustomField>