force-app/main/default/objects/CMCreationEvent__e/fields/riskownerLicensedate__c.field-meta.xml
<CustomField>
    <fullName>riskownerLicensedate__c</fullName>
    <label>Fecha Carnet de Propietario</label>
    <type>Date</type>
</CustomField>