force-app/main/default/objects/CMCreationEvent__e/fields/riskPolicyHolderBirthDate__c.field-meta.xml
<CustomField>
    <fullName>riskPolicyHolderBirthDate__c</fullName>
    <label>Fecha Nacimiento de Tomador</label>
    <type>Date</type>
</CustomField>