force-app/main/default/objects/CMCreationEvent__e/fields/riskpolicyholderLicensedate__c.field-meta.xml
<CustomField>
    <fullName>riskpolicyholderLicensedate__c</fullName>
    <label>Fecha Carnet de Tomador</label>
    <type>Date</type>
</CustomField>