force-app/main/default/objects/CMCreationEvent__e/fields/riskPostalcode__c.field-meta.xml
<CustomField>
    <fullName>riskPostalcode__c</fullName>
    <label>Código Postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>