force-app/main/default/objects/CMCreationEvent__e/fields/riskPropertytype__c.field-meta.xml
<CustomField>
    <fullName>riskPropertytype__c</fullName>
    <label>Tipo de Vivienda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>