force-app/main/default/objects/CMCreationEvent__e/fields/RiskProvince__c.field-meta.xml
<CustomField>
    <fullName>RiskProvince__c</fullName>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>