force-app/main/default/objects/CMCreationEvent__e/fields/riskSquaremetres__c.field-meta.xml
<CustomField>
    <fullName>riskSquaremetres__c</fullName>
    <label>Metros Cuadrados</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>