force-app/main/default/objects/CMCreationEvent__e/fields/riskTenant__c.field-meta.xml
<CustomField>
    <fullName>riskTenant__c</fullName>
    <label>Propietario o Inquilino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>