force-app/main/default/objects/CMCreationEvent__e/fields/riskVersion__c.field-meta.xml
<CustomField>
    <fullName>riskVersion__c</fullName>
    <label>Versión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>