force-app/main/default/objects/CMCreationEvent__e/fields/SalesSlip__c.field-meta.xml
<CustomField>
    <fullName>SalesSlip__c</fullName>
    <label>Talón de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>