force-app/main/default/objects/CMCreationEvent__e/fields/skill__c.field-meta.xml
<CustomField>
    <fullName>skill__c</fullName>
    <label>CTI Skill</label>
    <length>10</length>
    <type>Text</type>
</CustomField>