force-app/main/default/objects/CMCreationEvent__e/fields/source_web__c.field-meta.xml
<CustomField>
    <fullName>source_web__c</fullName>
    <label>Web Anunciante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>