force-app/main/default/objects/CMCreationEvent__e/fields/sourceCess__c.field-meta.xml
<CustomField>
    <fullName>sourceCess__c</fullName>
    <label>Origen - CESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>