force-app/main/default/objects/CMCreationEvent__e/fields/sourceLeadDocumentType__c.field-meta.xml
<CustomField>
    <fullName>sourceLeadDocumentType__c</fullName>
    <label>Tipo documento de lead originario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>