force-app/main/default/objects/CMCreationEvent__e/fields/sourceLeadEmail__c.field-meta.xml
<CustomField>
    <fullName>sourceLeadEmail__c</fullName>
    <label>Correo electrónico de lead originario</label>
    <length>80</length>
    <type>Text</type>
</CustomField>