force-app/main/default/objects/CMCreationEvent__e/fields/sourceLeadId__c.field-meta.xml
<CustomField>
    <fullName>sourceLeadId__c</fullName>
    <description>Id del lead que al insertarse creó este evento</description>
    <label>Id de lead originario</label>
    <length>18</length>
    <type>Text</type>
</CustomField>