force-app/main/default/objects/CMCreationEvent__e/fields/sourceLeadMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>sourceLeadMobilePhone__c</fullName>
    <label>Móvil de lead originario</label>
    <length>40</length>
    <type>Text</type>
</CustomField>