force-app/main/default/objects/CMCreationEvent__e/fields/sourceLeadNumber__c.field-meta.xml
<CustomField>
    <fullName>sourceLeadNumber__c</fullName>
    <label>Número documento de lead originario</label>
    <length>20</length>
    <type>Text</type>
</CustomField>