force-app/main/default/objects/CMCreationEvent__e/fields/sourceLeadPhone__c.field-meta.xml
<CustomField>
    <fullName>sourceLeadPhone__c</fullName>
    <label>Teléfono de lead originario</label>
    <length>40</length>
    <type>Text</type>
</CustomField>