force-app/main/default/objects/CMCreationEvent__e/fields/sourceManualrecord__c.field-meta.xml
<CustomField>
    <fullName>sourceManualrecord__c</fullName>
    <label>Origen - Registro Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>