force-app/main/default/objects/CMCreationEvent__e/fields/sourceType__c.field-meta.xml
<CustomField>
    <fullName>sourceType__c</fullName>
    <label>Medio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>