force-app/main/default/objects/CMCreationEvent__e/fields/sourceWeb__c.field-meta.xml
<CustomField>
    <fullName>sourceWeb__c</fullName>
    <label>Origen - Canal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>